kylin-display-switch (3.0.11) v101; urgency=medium

  * 优化飞行模式托盘图标逻辑;优化飞行模式、蓝牙、WiFi的当前状态获取

 -- hebing <hebing@kylinos.cn>  Thu, 21 Jan 2021 19:40:21 +0800

kylin-display-switch (3.0.10) v101; urgency=medium

  * 增加蓝牙，Wlan开启/关闭的dbus接口
  * 托盘图标切换飞行模式后增加状态提示图标
  * 不再响应Win+p，由settings-daemon响应

 -- hebing <hebing@kylinos.cn>  Thu, 21 Jan 2021 19:40:21 +0800

kylin-display-switch (3.0.9) v101; urgency=medium

  * 逻辑重新设计，基准由主屏(可变属性)改为屏幕序号(固定属性)
  * KDS界面不在任务栏显示图标

 -- hebing <hebing@kylinos.cn>  Fri, 15 Jan 2021 20:18:21 +0800

kylin-display-switch (3.0.8) v101; urgency=medium

  * 增加飞行模式
  * 增加一键锁屏
  * 增加一键关屏

 -- hebing <hebing@kylinos.cn>  Mon, 21 Dec 2020 16:17:38 +0800

kylin-display-switch (3.0.7) v101; urgency=medium

  * 增加摄像头功能
  * 增加功能和键值的映射

 -- hebing <hebing@kylinos.cn>  Mon, 21 Dec 2020 16:17:38 +0800

kylin-display-switch (3.0.6) v101; urgency=medium

  * 增加触摸板开关，调用X11接口
  * 增肌右Super+p的支持
  * 增加麦克风的响应

 -- hebing <hebing@kylinos.cn>  Mon, 21 Dec 2020 16:17:38 +0800

kylin-display-switch (3.0.5) v101; urgency=medium

  * kds界面增加当前主屏的显示

 -- hebing <hebing@kylinos.cn>  Mon, 21 Dec 2020 16:17:38 +0800

kylin-display-switch (3.0.4) v101; urgency=medium

  * 注释debug语句
  * 解决：切换到不支持模式时，app未退出

 -- hebing <hebing@kylinos.cn>  Thu, 03 Dec 2020 20:51:31 +0800

kylin-display-switch (3.0.3) v101; urgency=medium

  * 增加evdev event 监听进程

 -- hebing <hebing@kylinos.cn>  Thu, 03 Dec 2020 20:51:31 +0800

kylin-display-switch (3.0.2) v100; urgency=medium

  * 解决BUG#27821，kds程序在V10.1下启动段错误，V10下正常

 -- hebing <hebing@kylinos.cn>  Thu, 03 Dec 2020 20:51:31 +0800

kylin-display-switch (3.0.1) v100; urgency=medium

  * recode used by qt

 -- hebing <hebing@kylinos.cn>  Thu, 03 Dec 2020 20:51:31 +0800

kylin-display-switch (2.0.13-1+1125) v101; urgency=medium

  * hide "control phone"

 -- hebing <hebing@kylinos.cn>  Sat, 21 Nov 2020 16:52:27 +0800

kylin-display-switch (2.0.12-1) unstable; urgency=medium

  * Fix lintian error.
