@@ -24,8 +24,7 @@ INSTALLS +=  \
 
 SOURCES += main.cpp \
     emdaemon.cpp \
-    eventmonitorthread.cpp \
-    justfordebug.cpp
+    eventmonitorthread.cpp
 
 # The following define makes your compiler emit warnings if you use
 # any feature of Qt which as been marked deprecated (the exact warnings
@@ -40,5 +39,4 @@ DEFINES += QT_DEPRECATED_WARNINGS
 
 HEADERS += \
     emdaemon.h \
-    eventmonitorthread.h \
-    justfordebug.h
+    eventmonitorthread.h
