@@ -1,3 +1,10 @@
+kylin-display-switch (3.0.12kylin1) v101; urgency=medium
+
+  * 接管飞行模式、禁用摄像头的键盘灯
+  * 锁屏状态下不再弹出MediaKey Tip
+
+ -- hebing <hebing@kylinos.cn>  Thu, 21 Jan 2021 19:40:21 +0800
+
 kylin-display-switch (3.0.11) v101; urgency=medium
 
   * 优化飞行模式托盘图标逻辑;优化飞行模式、蓝牙、WiFi的当前状态获取
